loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:2: error: Int does not take parameters
  avance()
        ^LoopStairs:10: error: Int does not take parameters
  avance() 
        ^