loopfor.LoopStairs.scala.code
for (avance <- 1 to 3)
	avance()
while(estFaceMur()) {
  gauche()
  avance()
  droite()
  avance()
}
for (avance <- 1 to 3)
	avance()